# Omiver-Website

./: .gitignore  Dockerfile  compose.yaml  db.sqlite3  index.html  manage.py  pyproject.toml  requirements.txt  setup.sh
api/: mock.http  views.py
components/custom_slider/: custom_slider.py
components/demo_modal/: demo_modal.css  demo_modal.html  demo_modal.py
components/ibutton/: ibutton.css  ibutton.html  ibutton.py
components/setting_item/: setting_item.css  setting_item.html
core/: models.py  urls.py  views.py
core/static/core/: footer.css  style.css
core/templates/core/: base.html  footer.html  header.html  index.html  information.html  login.html  welcome.html  welcome_page.html
dashboard/: urls.py  views.py
dashboard/static/dashboard/: style.css
dashboard/templates/: base_dashboard.html
dashboard/templates/dashboard/: base.html  chatbot.html  clients.html  plans.html  profile.html  settings.html  support.html  ticket_detail_partial.html
demo/: urls.py  views.py
demo/data/: profiles.json
demo/templates/demo/: base.html  process.html  profile_detail.html  (+4 more)
mail/: urls.py  views.py
nginx/: nginx.conf
omiver_website/: gunicorn.py  settings.py  urls.py
profiles/: models.py  views.py
profiles/migrations/: 0001_initial.py
src/api/: serializer.py  urls.py
src/core/: urls.py
src/demo/: urls.py  views.py
src/mail/: views.py
src/omiver_website/: asgi.py  settings.py  wsgi.py
src/profiles/: urls.py
src/templates/: base.html
startup_scripts/: database.sh
static/: style.css
templates/: base.html
users/: models.py
(+63 files in other folders)
